--- a/projects.html
+++ b/projects.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuisDev</title>
+    <title>LuisDev / PROJECTS</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <header>
-        <h1 id="logo">LUIS</h1>
+        <h1 id="logo"><a href="">LUIS</a></h1>
         <nav>
             <ul>
-                <li><b>Home</b></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><b>Projects</b></li>
                 <li><a href="aboutme.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
