--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuisDev</title>
+    <title>LuisDev / CONTACT</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <header>
-        <h1 id="logo">LUIS</h1>
+        <h1 id="logo"><a href="">LUIS</a></h1>
         <nav>
             <ul>
-                <li><b>Home</b></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutme.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><b>Contact</b></li>
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <div class="underconstruction">
             <h1>Website under construction ...</h1>
